force-app/main/default/objects/Exame_Ocupacionais__c/Exame_Ocupacionais__c.object-meta.xml
<CustomObject>
    <label>Exame Ocupacional</label>
    <nameField>
        <displayFormat>EP-{0000}</displayFormat>
        <label>Nome de Exame Periódico</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exames Ocupacionais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>