force-app/main/default/objects/Exame_Ocupacionais__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <formula>ISBLANK(Data_de_Desligamento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>