force-app/main/default/objects/Exame_Ocupacionais__c/fields/Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Colaborador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>O colaborador não existe ou não está ativo.</errorMessage>
        <filterItems>
            <field>Contact.Colaborador_ativo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Exames_Periodicos</relationshipName>
    <type>Lookup</type>
</CustomField>