force-app/main/default/objects/Exame_Ocupacionais__c/fields/Data_da_Admissao__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Admissao__c</fullName>
    <label>Data da Admissão</label>
    <type>Date</type>
</CustomField>