force-app/main/default/objects/Exame_Ocupacionais__c/fields/Data_de_Desligamento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Desligamento__c</fullName>
    <label>Data de Desligamento</label>
    <type>Date</type>
</CustomField>