force-app/main/default/objects/Exame_Ocupacionais__c/fields/Nome_do_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Colaborador__c</fullName>
    <formula>Colaborador__r.FirstName + &quot; &quot; + Colaborador__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Colaborador</label>
    <type>Text</type>
</CustomField>