force-app/main/default/objects/Exame_Ocupacionais__c/fields/Vencimento_da_ASO__c.field-meta.xml
<CustomField>
    <fullName>Vencimento_da_ASO__c</fullName>
    <label>Vencimento da ASO</label>
    <type>Date</type>
</CustomField>