force-app/main/default/objects/Exame_Ocupacionais__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nome_do_Colaborador__c</columns>
    <columns>Colaborador__c</columns>
    <columns>Vencimento_da_ASO__c</columns>
    <columns>Data_da_Admissao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>