force-app/main/default/objects/Exame_Ocupacionais__c/listViews/Colaboradores_Ativo.listView-meta.xml
<ListView>
    <fullName>Colaboradores_Ativo</fullName>
    <columns>NAME</columns>
    <columns>Colaborador__c</columns>
    <columns>Nome_do_Colaborador__c</columns>
    <columns>Vencimento_da_ASO__c</columns>
    <columns>Data_da_Admissao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ativo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Colaboradores Ativo</label>
</ListView>